2005-01-01  Richard M. Stallman  <rms@gnu.org>

	* cus-face.el (custom-face-attributes): Fix :help-echo strings
	for :foreground and :background.

	* dired.el (dired-view-command-alist): Variable deleted.
	(dired-view-file, dired-mouse-find-file-other-window): 
	Delete the code to use it.

2005-01-01  Kim F. Storm  <storm@cua.dk>

	* image.el (insert-sliced-image): Use t for line-height property.

2004-12-31  Jay Belanger  <belanger@truman.edu>

	* calc/calc-store.el (calcVar-digit, calcVar-oper):  Remove the need
	for "var-" at the beginning of the minibuffer.

2004-12-31  Richard M. Stallman  <rms@gnu.org>

	* faces.el (read-face-name):
	Don't treat an attribute spec as a list of faces.

	* simple.el (undo): Use undo-equiv-table to detect
	unexpected changes since previous undo.
	(undo-list-saved): Variable deleted.
	(buffer-disable-undo): Don't alter undo-list-saved.

	* files.el (require-final-newline): Allow `visit' and `visit-save'.
	(mode-require-final-newline): New option.
	(after-find-file): Handle require-final-newline with new values.
	(basic-save-buffer): Handle new values of require-final-newline.

	* progmodes/sh-script.el (sh-require-final-newline):
	Alist value now controls whether to use mode-require-final-newline.
	(sh-set-shell): Implement that new meaning.

	* progmodes/cc-vars.el (c-require-final-newline): Fix custom type, doc.
	* progmodes/cc-mode.el (c-common-init): Use mode-require-final-newline.
	* progmodes/antlr-mode.el (antlr-mode): Use mode-require-final-newline.
	Delete old-Emacs compatibility code.
	(antlr-c-common-init): Function deleted.

	* net/snmp-mode.el (snmp-common-mode): Use mode-require-final-newline.
	* progmodes/vhdl-mode.el (vhdl-mode): Use mode-require-final-newline.
	* progmodes/simula.el (simula-mode): Use mode-require-final-newline.
	* progmodes/python.el (python-mode): Use mode-require-final-newline.
	* progmodes/perl-mode.el (perl-mode): Use mode-require-final-newline.